@@ -1,6 +1,10 @@
 piaware-mutability (1.19-1mu-1) UNRELEASED; urgency=medium
 
   * Merge changes from upstream 1.19-1 package.
+  * Use --numeric to speed up netstat output.
+  * Handle IPv6 in netstat output.
+  * Use a placeholder process name when the real name of a listening
+    process is not provided by netstat.
 
  -- Oliver Jowett <oliver@mutability.co.uk>  Tue, 30 Dec 2014 00:27:48 +0000
 
